# cooking_inventory

./: main.py  pyproject.toml
db/: ingredients.yaml  recipes.yaml
