[tool.poetry]
name = "cooking-inventory"
version = "0.1.0"
description = "Inventory made easy"
authors = ["Moises Lopez"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
